# bevloc

./: LICENSE  README.md  build_project.sh  pyproject.toml  pytest.ini
aeromatch/: README.md
aeromatch/config/: poseidon.json  predator.json  settings.py  tartandrive_settings.json  tartandrive_settings_baseline.json  zeus.json
aeromatch/data/: README.md  create_splits.py  load_tartandrive2_dataset.py  load_tartandrive_dataset.py  splits.json  splits_tartandrivev2.json
aeromatch/eval/: eval_tartan_drive.py  eval_utils.py
aeromatch/features/: README.md  encoding.py  voxelization.py
aeromatch/matching/: matcher.py
aeromatch/models/: README.md  aerial_networks.py  bev_loc.py  ground_networks.py  loss.py  preprocessing.py
aeromatch/train/: train_tartandrive.py
aeromatch/utils/: aerial_processing.py  coord_systems.py  cv.py  data.py  local_odom.py  mining.py  parse_tartandrive_bag.py  test_utils.py  traj_tracer.py  visualization.py
baselines/: pc_scan_matching.py
models/: README.md
rosbag_to_dataset/converter/: converter.py
state_estimation/: factor_graphs.py  imu_processor.py
