[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aeromatch"
version = "0.0.1"
description = "Algorithm centered around matching ground camera images to an aerial map of the scene to provide global state estimates."
authors = ["Chris Klammer <cklammer@andrew.cmu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
opencv-python = "*"
osr = "*"
pyquaternion = "^0.9.9"
pytest = "*"
scipy = "^1.0"
torch = "2.0.0"
torchvision = "*"
xmltodict = "*"
roboteye = {git = "https://github.com/klammecr/robot-eye", branch = "master"}
pycryptodome = "^3.18.0"
pyyaml = "^6.0.1"
setuptools = "<58.0.0"
pytorch-metric-learning = "^2.3.0"
pytorch-lightning = "^2.1.3"
transformers = "^4.38.1"
gtsam = "^4.2"
open3d = "^0.18.0"
addict = "^2.4.0"
pypose = "^0.6.8"
pandas = "<2.2"
matplotlib = "<3.9"
mlflow = "^2.13.1"
wandb = "^0.18.3"
